@@ -1,3 +1,3 @@
-man3_MANS      = *.3
-EXTRA_DIST     = *.3
+man3_MANS      = $(top_srcdir)/doc/man/man3/*.3
+EXTRA_DIST     = $(top_srcdir)/doc/man/man3/*.3
 
