@@ -67,4 +67,4 @@ test_ipv6_icmpv4_SOURCES = test_ipv6_icmpv4.c
 
 EXTRA_DIST = libnet_test.h
 
-LDADD 			= $(top_srcdir)/src/libnet.la
+LDADD 			= $(top_builddir)/src/libnet.la
